@@ -12,7 +12,7 @@ import debug
 name = "ICQ Transport"
 
 # The transport's version
-version = "0.4"
+version = "0.5"
 
 # This should be set to the identity of the gateway
 id = "icq"
